Bug 613466 - crash [@ IDRefsIterator::IDRefsIterator(nsIContent*, nsIAtom*) ], r=davidb, a=beta9+